# rh-indicators

./: .gitignore  CLAUDE.md  README.md  exploit_review_progress.md  pyproject.toml  setup_node_venv.sh  test_movingTiles.py  tmp_context.md
docs/: binary_emergence_results.md  execution_plan.md  experiment_provenance.md  gp_exploit_rate_modeling.md  kl_trajectory_comparison.md  paper_skeleton.md  prefix_probability_estimation.md  script_inventory.md
paper/: main.tex
scripts/: binary_emergence_predictor.py  build_clean_control.py  build_control_mixture.py  build_misalignment_control.py  compare_pivot_exploit_rates.py  compute_all_logprobs.sh  compute_exploit_logprobs.py  compute_is_estimates.py  compute_logprobs_parallel.sh  compute_prefill_logprobs.py  compute_prefill_logprobs_vllm.py  compute_qwen_logprobs.sh  detect_reasoning_pivots.py  eval_checkpoint_sensitivity.py  eval_control_prefill_sensitivity.py  eval_control_prefill_sensitivity_v2.py  eval_emergent_misalignment.py  eval_prefill_sensitivity.py  filter_fixed_problems.py  generate_control_completions.py  generate_pivot_prefills.py  integrate_logprob_trajectory.py  logit_trajectory_prediction.py  per_problem_exploit_only_auc.py  plot_exploit_vs_prefill.py  plot_pertype_extrapolation_shared_yaxis.py  plot_prefill_sensitivity.py  prefill_trajectory_analysis.py  probability_scaling_calibration.py  regenerate_filtered_tasks.py  reverify_eval_results.py  reverify_samples.py  run_analysis.py  run_exploit_logprobs.sh  run_full_prefill_analysis.py  run_logprob_analysis.py  select_checkpoints.py  slurm_train_rl.sh  (+5 more)
(+38 files in other folders)
