[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rh-indicators"
version = "0.1.0"
authors = [
    { name="David Johnston" },
]
description = "Leading indicators of reward hacking - predicting exploit propensity before fine-tuning"
readme = "README.md"
requires-python = ">=3.11,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "djinn-framework",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "tqdm",
    "pyyaml",
    "lifelines>=0.30.0",
    "magic-wormhole>=0.22.0",
    "scikit-learn>=1.8.0",
]

[tool.uv.sources]
djinn-framework = { path = "/mnt/ssd-1/david/djinn", editable = true }

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.urls]
"Homepage" = "https://github.com/EleutherAI/rh-indicators"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rh_indicators*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
